<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- App strings for titles/activities -->
    <string name="app_name">To Do</string>
    <string name="title_list_main">My To Do List</string>

    <!-- sync -->
    <string name="sync_account_type">com.github.jmitchell38488.todo.app</string>
    <string name="content_authority" translatable="false">com.github.jmitchell38488.todo.app.provider</string>
    <string name="view_error_message">Could not load content at this time</string>

    <!-- Action titles -->
    <string name="action_settings">Settings</string>
    <string name="action_create">Add New To Do Item</string>
    <string name="action_edit">Edit To Do Item</string>
    <string name="action_edit_description">Edit Notes</string>
    <string name="action_confirm_exit">Unsaved changes</string>
    <string name="action_confirm_exit_description">You have unsaved changes. If you continue you will lose those changes.</string>

    <!-- Option titles -->
    <string name="option_action_save">Save</string>
    <string name="option_action_share">Share item</string>
    <string name="option_action_delete">Delete item</string>
    <string name="option_action_settings">Settings</string>

    <!-- string formats (non translatable) -->
    <string name="date_format" translatable="false">yyyy-MM-dd kk:mm:ssZ</string>
    <string name="date_format_dayname" translatable="false">EEEE</string>
    <string name="date_format_monthday" translatable="false">MMMM dd</string>
    <string name="date_format_daymonthday" translatable="false">EEE MMM dd</string>
    <string name="date_format_time" translatable="false">h:mm a</string>
    <string name="date_format_date_alarm" translatable="false">EEE, d MMMM</string>
    <string name="date_format_date_alarm_field" translatable="false">EEE, d MMM yyyy</string>
    <string name="date_format_date_alarm_toast" translatable="false">EEE, d MMM yyyy kk:mm</string>
    <string name="date_format_alarm_notification_12" translatable="false">EEE hh:mm a</string>
    <string name="date_format_alarm_notification_24" translatable="false">EEE kk:mm</string>

    <!-- Output formats -->
    <string name="format_full_friendly_date" translatable="false"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Language specific values -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="status_overdue">Overdue</string>
    <string name="status_todo">To Do</string>
    <string name="status_complete">Completed</string>

    <!-- Dialog stuff -->
    <string name="item_edit_title_label">What is to be done</string>
    <string name="item_edit_description_label">Notes</string>
    <string name="item_edit_title_hint">The to do item</string>
    <string name="item_edit_description_hint">Additional details</string>
    <string name="item_edit_disabled">This item is already marked as complete. \nTo edit, you must re-enable it by unchecking it.</string>
    <string name="item_edit_reminder_label">Set a reminder</string>
    <string name="item_edit_reminder_date_hint">Select a date</string>
    <string name="item_edit_reminder_time_hint">Select a time</string>
    <string name="item_edit_reminder_alarm_hint">Select an alarm tone</string>

    <string name="item_edit_button_positive">Save</string>
    <string name="item_edit_button_negative">Cancel</string>
    <string name="item_edit_button_ok">Got it!</string>
    <string name="item_edit_button_ok2">Ok</string>

    <string name="item_edit_pin_label">Flag as important</string>
    <string name="item_edit_pin_key">pinned</string>
    <string name="item_edit_pin_false"></string>
    <string name="item_edit_pin_true">This is an important task and will appear at the top of the to do list.</string>
    <string name="item_edit_pin_default">false</string>

    <string name="item_edit_completed_label">Item completed?</string>
    <string name="item_edit_completed_false"></string>
    <string name="item_edit_completed_true"></string>

    <string name="item_edit_locked_label">Protected item?</string>
    <string name="item_edit_locked_false"></string>
    <string name="item_edit_locked_true"></string>

    <string name="empty_list_top">Time to relax, kick your feet up\n you\'re all finished!</string>
    <string name="empty_list_bottom">Feel like getting busy?\nAdd a Todo using the button below.</string>

    <string name="empty_title">A title for the to do is required</string>

    <string name="icon_flag" translatable="false">\uf024</string>
    <string name="icon_reminder" translatable="false">\uf0f3</string>
    <string name="icon_locked" translatable="false">\uf023</string>
    <string name="icon_calendar" translatable="false">\uf073</string>
    <string name="icon_cancel" translatable="false">\uf05c</string>
    <string name="icon_clock" translatable="false">\uf017</string>
    <string name="icon_description" translatable="false">\uf044</string>
    <string name="icon_title" translatable="false">\uf040</string>
    <string name="icon_tick" translatable="false">\uf00c</string>

    <string name="invalid_list_position">Sorry, I could not update the item for you.\nIf this keeps happening,\nplease reload me</string>

    <string name="action_item_undo">UNDO</string>
    <string name="action_item_remove">REMOVE</string>
    <string name="action_item_complete">COMPLETED</string>

    <string name="action_save_failed">Could not update or save item</string>
    <string name="action_save_saved">Item saved</string>

    <!-- notification -->
    <string name="notification_periodic_1" translatable="false">You have only 1 pending item left in your to do list</string>
    <string name="notification_periodic_2" translatable="false">You have <xliff:g id="pending">%d</xliff:g> pending items left in your to do list</string>
    <string name="notification_periodic_i1" translatable="false">You have only 1 pending important item left in your to do list</string>
    <string name="notification_periodic_i2" translatable="false">You have <xliff:g id="pending">%d</xliff:g> pending items left in your to do list, <xliff:g id="important">%d</xliff:g> of them are important</string>
    <string name="notification_periodic_extra">You can change or disable this reminder in the app settings.</string>
    <string name="notification_periodic_title">To Do Daily Report</string>
    <string name="notification_current_title">Todo reminder: <xliff:g id="title">%s</xliff:g></string>
    <string name="notification_current_title2">Todo reminder</string>
    <string name="notification_current_description"><xliff:g id="desc">%s</xliff:g>\n<xliff:g id="date">%s</xliff:g></string>
    <string name="notification_current_description2"><xliff:g id="date">%s</xliff:g></string>
    <string name="notification_pending_title">Upcoming todo reminder</string>
    <string name="notification_pending_description">Alarm for <xliff:g id="title">%s</xliff:g></string>
    <string name="notification_snoozed_title">Todo reminder snoozed</string>
    <string name="notification_snoozed_description">Alarm for <xliff:g id="title">%s</xliff:g> snoozing until <xliff:g id="date">%s</xliff:g></string>

    <!-- alarm -->
    <string name="alarm_title">To Do Reminder</string>
    <string name="alarm_button_snooze">Snooze</string>
    <string name="alarm_button_dismiss">Dismiss</string>
    <string name="alarm_snooze_message">Alarm snoozed for <xliff:g id="time">%d</xliff:g> minute<xliff:g id="suffix">%s</xliff:g></string>
    <string name="alarm_set_message">Alarm set for <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_notification_message">Alarm for <xliff:g id="title">%d</xliff:g> as <xliff:g id="time">%d</xliff:g></string>
    <string name="alarm_snooze_notification_message">Alarm for <xliff:g id="title">%s</xliff:g> snoozed <xliff:g id="time">%d</xliff:g> minute<xliff:g id="suffix">%s</xliff:g></string>

    <!-- Preferences -->
    <string name="pref_times_run_key">times_run</string>
    <string name="pref_times_run_default">0</string>
    <string name="pref_install_time_key">install_time</string>
    <string name="pref_install_time_default">0</string>
    <string name="pref_periodic_notification_active_key">periodic_notification_active</string>
    <string name="pref_periodic_notification_active_default">true</string>
    <string name="pref_periodic_notification_enabled_key">periodic_notification_enabled</string>
    <string name="pref_periodic_notification_enabled_default">true</string>
    <string name="pref_alarm_snooze_maxtimes_key">alarm_snooze_maxtimes</string>
    <string name="pref_alarm_snooze_maxtimes_default">5</string>
    <string name="pref_alarm_snooze_time_key">alarm_snooze_time</string>
    <string name="pref_alarm_snooze_time_default">1</string>
    <string name="pref_alarm_snooze_timeout_key">alarm_snooze_timeout</string>
    <string name="pref_alarm_snooze_timeout_default">60</string>

    <string-array name="drawer_list">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_title_open">Open</string>
    <string name="drawer_title_closed">Closed</string>

</resources>
